# AOC2022

./: Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  lib.rs  template.rs
